[tool.poetry]
name = "fetchpp"
version = "0.1.0"
description = "HTTP client library for C++"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.8"
tankerci = { version = ">= 2022.06.4315", source = "gitlab" }

[tool.poetry.dev-dependencies]
# linters
black = "22.3.0"
flake8 = "4.0.1"
flake8-comprehensions = "3.10.0"
flake8-docstrings = "1.6.0"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
